2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Added a way to get the number of pending read
	requests for a ProgressiveSource.

	* pal/gtk/debug-ui.cpp: More information and fixes to the media element
	dialog.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Playlist::PlayNext: don't fetch the element before we
	actually need it. Makes a sanity warning go away.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/debug-ui.cpp: Add a copy button to the media element view to
	copy all text to the clipboard.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp:
	* pipeline-asf.cpp|h: Fix looping ranges to [1-127] for
	MmsPlaylistEntry::GetSelectedStream arguments.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Add debug information for server problems to filter
	those out more easily.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/pal-gtk.cpp: More g_assert removals.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/pal-gtk.cpp: Implement a g_assert_not_reached as per toshok's
	recommendation.

2010-01-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Remove dead code.

2010-01-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Remove a frequent g_warning.

2010-01-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h: Remove dead code.

2010-01-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Make a quite common g_warning a normal non-scary printf

2010-01-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* enums.cpp: Map PixelFormat to strings.
	* pipeline.cpp: Show pixel format string representation instead of a
	numeric value in printfs.

2010-01-14  Alan McGovern  <amcgovern@novell.com>

	* style.h: Get rid of some of the bonus API points we've
	  accumulated.

	* cbinding.h: regen.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
